<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/edit_text_hint_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/edit_text_hint_mail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser"/>


    <Button
        android:id="@+id/btnSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_sing_in"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_sing_up"
        android:backgroundTint="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSingIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>